--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -3,7 +3,7 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=DevOps BTP Demo 1
+appTitle=DevOps SAP BTP Demo 1
 
 #YDES: Application description
 appDescription=A Fiori application.
